# PCCD_C

./: CMakeLists.txt  Sin título 2.rtf  compilar.sh  destinatario.c  emisor.c  escritor.c  inicializacion  inicializacion.c  lector.c  lectores  lectores.c  memoria_compartida.c  memoria_compartida.txt  muchas_signals.c  pago_anulacion.c  pagos_anulaciones  pagos_anulaciones.c  pccd.c  pccd.h  prerreserva.c  prerreservas  prerreservas.c  pruebas.sh  pruebasMon.sh  receptor  receptor.c  registro_sc_distribuida  registro_sc_distribuida.c  registro_sc_local  registro_sc_local.c  script.sh  seccion_critica_distribuida.txt  seccion_critica_local.txt
